--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+    <header>
+      <% if user_signed_in? %>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      <% else %>
+      <%= link_to "ログイン", user_session_path, method: :post %>
+      <%= link_to "新規登録", new_user_registration_path, method: :get %>
+      <% end %>
+    </header>
+    <main>
     <%= yield %>
+    </main>
   </body>
 </html>
