--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#show</h1>
-ログイン後のランディングペーじ
+<div class="container">
+  <div class="row px-5 px-sm-0">
+    <div class="col-md-3">
+      <h2>User info</h2>
+
+      <h2>New book</h2>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+    </div>
+  </div>
+</div>
