User infoのレイアウト

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,24 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
-ユーザー編集画面
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
+      <h1>User info</h1>
+      <%= form_with model: @user url: edit_user_path(@user.id), method: :patch do |f| %>
+      <div class="form-group">
+      <label>Name</label>
+      <%= f.text_field :name  %>
+      </div>
+      <div class="form-group">      
+      <label>Image</label>
+      <%= f.file_field :image, accept: "image/*" %>
+      </div>
+      <div class="form-group">       
+      <label>Introduction</label>
+      <%= f.text_area :introduction %>
+      </div>
+      <div class="form-group"> 
+      <button class="bnt btn-secondary"><%= f.submit 'Update User' %></button>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
