フラッシュメッセージ実装

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -20,5 +20,5 @@
 </table>
 
 <div class="row">
-  <a class="btn btn-outline-secondary btn-block" href="<%= edit_user_path(user.id) %>"><i class="fas fa-user-cog"></i></a>
+  <a class="btn btn-outline-secondary btn-block mb-2" href="<%= edit_user_path(user.id) %>"><i class="fas fa-user-cog"></i></a>
 </div>
