--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,22 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
-ブック編集画面
+<div class="container">
+  <div class="row">
+    <div class="ol-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
+        <div class="form-group">
+          <label>Title</label>
+          <%= f.text_field :title, class: 'form-control'  %>
+        </div>
+        <div class="form-group">
+          <label>Opinion</label>
+          <%= f.text_area :body, class: 'form-control'   %>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Update Book', class: 'btn btn-success'  %>
+        </div>
+      <% end %>
+      <a href="<%= book_path(@book.id) %>">Show</a>|
+      <a href="/books">Back</a>
+    </div>
+  </div>
+</div>
