--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,11 +2,36 @@
   <div class="row px-5 px-sm-0">
     <div class="col-md-3">
       <h2>User info</h2>
-      <%= render 'users/info', user: @user %>
+      <%= render 'users/info', user: current_user %>
       <h2>New book</h2>
+      <%= render 'books/form', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
+
+        <table class="table table-hover table-inverse" >
+          <thead>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </thead>
+
+          <tbody>
+            <% @books.each do |f| %>
+            <tr>
+              <td><%= link_to(f.user) do %>
+              <%= image_tag f.user.get_image, size: '80x80' %>
+              <% end %>
+              </td>
+              <td><%= link_to f.title, "books/#{f.id}"  %></td>
+              <td><%= f.body %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+
     </div>
+
   </div>
 </div>
