--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,34 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
-ブックの詳細画面
+<div class="container">
+  <div class="row px-5 px-sm-0">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render 'users/info', user: @book.user %>
+      <h2>New book</h2>
+      <%= render 'books/form', book: Book.new %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table" >
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to(@book.user) do %>
+              <%= image_tag @book.user.get_image, size: '100x100' %>
+              <br><%= @book.user.name %>
+              <% end %>
+            </td>
+            <td><%= link_to @book.title, "/books/#{@book.id}"  %></td>
+            <td><%= @book.body %></td>
+            <% if @book.user_id == current_user.id %>
+            <td><%= link_to 'Edit', "#{@book.id}/edit", class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', "#{@book.id}", class: "btn btn-sm btn-danger", method: :delete %></td>
+            <% else %>
+            <% end %>
+          </tr>
+          </tbody>
+        </table>
+
+    </div>
+
+  </div>
+</div>
