--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,11 +2,37 @@
   <div class="row px-5 px-sm-0">
     <div class="col-md-3">
       <h2>User info</h2>
-
+      <%= render 'users/info', user: @user %>
       <h2>New book</h2>
+      <%= render 'books/form', book: Book.new %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
+      <table class="table" >
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+            <% @books.each do |f| %>
+            <tr>
+              <td>
+                <%= link_to(f.user) do %>
+                <%= image_tag f.user.get_image, size: '80x80' %>
+                <% end %>
+              </td>
+              <td><%= link_to f.title, "/books/#{f.id}"  %></td>
+              <td><%= f.body %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+
     </div>
+
   </div>
 </div>
