--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="ol-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>Editing Book</h1>
+      <%= render 'errors', book: @book %>
       <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
         <div class="form-group">
           <label>Title</label>
