--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class = "error_explanation">
+   <%= render 'errors', book: @book %>
+  </div>
   <div class="row px-5 px-sm-0">
     <div class="col-md-3">
       <h2>User info</h2>
