--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,16 @@
   <div class="row">
     <div class="ol-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>User info</h1>
+        <div class="error_explanation">
+          <%if @user.errors.any? %>
+            <h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3>
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+              <%end %>
+            </ul>
+          <%end %>
+        </div>
       <%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
       <div class="form-group">
       <label>Name</label>
