--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
               <a class="nav-link text-light" href="<%= books_path %>"><i class="fas fa-book-open mr-1"></i>Books</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="<%= destroy_user_session_path %>" data-method="delete"><i class="fas fa-sign-out-alt mr-1"></i>Log out</a>
+              <a class="nav-link text-light" href="<%= destroy_user_session_path %>" data-method="delete"><i class="fas fa-sign-out-alt mr-1"></i>logout</a>
             </li>
           <% else %>
             <li class="nav-item">
@@ -28,10 +28,10 @@
               <a class="nav-link text-light" href="<%= home_about_path %>"><i class="fas fa-link mr-1"></i>About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="<%= new_user_registration_path %>" data-method="get"><i class="fas fa-user-plus mr-1"></i>Sign up</a>
+              <a class="nav-link text-light" href="<%= new_user_registration_path %>" data-method="get"><i class="fas fa-user-plus mr-1"></i>sign up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="<%= user_session_path %>" data-method="post"><i class="fas fa-sign-in-alt mr-1"></i>Log in</a>
+              <a class="nav-link text-light" href="<%= user_session_path %>" data-method="post"><i class="fas fa-sign-in-alt mr-1"></i>login</a>
             </li>
           <% end %>
           </ul>
