--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="form-group">
       <label>Image</label>
-      <%= f.file_field :image, accept: "image/*",class: 'form-control-file' %>
+      <%= f.file_field :profile_image, accept: "image/*",class: 'form-control-file' %>
       </div>
       <div class="form-group">
       <label>Introduction</label>
