--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,9 +19,9 @@
           <tbody>
             <% @users.each do |f| %>
             <tr>
-              <td><%= image_tag f.get_image, size: '80x80' %></td>
+              <td><%= image_tag f.get_profile_image, size: '80x80' %></td>
               <td><%= f.name %></td>
-              <td><%= link_to 'Show', "users/#{f.id}" %></td>
+              <td><%= link_to 'Show', "/users/#{f.id}" %></td>
             </tr>
             <% end %>
           </tbody>
