--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
             <tr>
               <td>
                 <%= link_to(f.user) do %>
-                <%= image_tag f.user.get_image, size: '80x80' %>
+                <%= image_tag f.user.get_profile_image, size: '80x80' %>
                 <% end %>
               </td>
               <td><%= link_to f.title, "/books/#{f.id}"  %></td>
