[update]コメント機能実装

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -43,6 +43,7 @@
                   <% end %>
                 </td>
               <% end %>
+              <td>コメント数：<%= f.comments.count %></td>
             </tr>
             <% end %>
           </tbody>
