--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,6 +21,17 @@
             <tr>
               <td><%= image_tag f.get_profile_image, size: '80x80' %></td>
               <td><%= f.name %></td>
+              <td>フォロー数：<%= f.followings.count %></td>
+              <td>フォロワー数：<%= f.followers.count %></td>
+              <td>
+                <% if current_user != f  %>
+                <% if current_user.following?(f) %>
+                <%= link_to 'フォローを外す', user_relationships_path(f.id), method: :delete %>
+                <% else %>
+                <%= link_to 'フォローする', user_relationships_path(f.id), method: :post %>
+                <% end %>
+                <% end %>
+              </td>
               <td><%= link_to 'Show', "/users/#{f.id}" %></td>
             </tr>
             <% end %>
