--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -14,11 +14,33 @@
     <tr>
       <th>Introduction</th>
       <th><%= user.introduction %></th>
+    </tr>
+    <tr>
+      <th>Follows</th>
+      <th><%= link_to user_followings_path(user.id) do %>
+          <%= user.followings.count %>
+          <% end %>
+      </th>
+    </tr>
+    <tr>
+      <th>Followers</th>
+      <th><%= link_to  user_followers_path(user.id) do %>
+        <%= user.followers.count %>
+        <% end %>
+      </th>
+    </tr>
   </tbody>
-    </tr>
-    </tr>
 </table>
 
-<div class="row">
-  <a class="btn btn-outline-secondary btn-block mb-2" href="<%= edit_user_path(user.id) %>"><i class="fas fa-user-cog"></i></a>
-</div>
+<% if current_user != user%>
+  <% if current_user.following?(user) %>
+    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info mb-2" %>
+  <% else %>
+    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success mb-2" %>
+  <% end %>
+<% else %>
+  <div class="row">
+    <a class="btn btn-outline-secondary btn-block mb-2" href="<%= edit_user_path(user.id) %>"><i class="fas fa-user-cog"></i></a>
+  </div>
+<% end %>
+
