--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,44 +11,7 @@
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-
-        <table class="table table-hover table-inverse" >
-          <thead>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
-            <th colspan="3"></th>
-          </thead>
-
-          <tbody>
-            <% @books.each do |f| %>
-            <tr>
-              <td>
-                <%= link_to(f.user) do %>
-                <%= image_tag f.user.get_profile_image, size: '80x80' %>
-                <% end %>
-              </td>
-              <td><%= link_to f.title, "/books/#{f.id}"  %></td>
-              <td><%= f.body %></td>
-              <% if f.favorited_by?(current_user) %>
-                <td>
-                  <%= link_to book_favorites_path(f.id), method: :delete do %>
-                  <i class="fa fa-heart"></i><%= f.favorites.count %>
-                  <% end %>
-                </td>
-              <% else %>
-                <td>
-                  <%= link_to book_favorites_path(f.id), method: :post do %>
-                  <i class="far fa-heart"></i><%= f.favorites.count %>
-                  <% end %>
-                </td>
-              <% end %>
-              <td>コメント数：<%= f.comments.count %></td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
-
+      <%= render 'index', books: @books %>
     </div>
 
   </div>
