--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -7,29 +7,17 @@
   </thead>
 
   <tbody>
-    <% books.each do |f| %>
-    <tr>
+    <% books.each do |book| %>
+    <tr id = "book_<%= book.id %>" >
       <td>
-        <%= link_to(f.user) do %>
-        <%= image_tag f.user.get_profile_image, size: '80x80' %>
+        <%= link_to(book.user) do %>
+        <%= image_tag book.user.get_profile_image, size: '80x80' %>
         <% end %>
       </td>
-      <td><%= link_to f.title, "/books/#{f.id}"  %></td>
-      <td><%= f.body %></td>
-      <% if f.favorited_by?(current_user) %>
-        <td>
-          <%= link_to book_favorites_path(f.id), method: :delete do %>
-          <i class="fa fa-heart"></i><%= f.favorites.count %>
-          <% end %>
-        </td>
-      <% else %>
-        <td>
-          <%= link_to book_favorites_path(f.id), method: :post do %>
-          <i class="far fa-heart"></i><%= f.favorites.count %>
-          <% end %>
-        </td>
-      <% end %>
-      <td>コメント数：<%= f.comments.count %></td>
+      <td><%= link_to book.title, "/books/#{book.id}"  %></td>
+      <td><%= book.body %></td>
+      <td class = "favorite-btn"><%= render 'favorites/btn', book: book %></td>
+      <td class = "comments-count">コメント数：<%= book.comments.count %></td>
     </tr>
     <% end %>
   </tbody>
