--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,7 +10,7 @@
       <h2>Book detail</h2>
       <table class="table" >
         <tbody>
-          <tr>
+          <tr id="book_<%= @book.id %>">
             <td>
               <%= link_to(@book.user) do %>
               <%= image_tag @book.user.get_profile_image, size: '100x100' %>
@@ -19,49 +19,23 @@
             </td>
             <td><%= link_to @book.title, "/books/#{@book.id}"  %></td>
             <td><%= @book.body %></td>
-            <% if @book.favorited_by?(current_user) %>
-              <td>
-                <%= link_to book_favorites_path(@book.id), method: :delete do %>
-                <i class="fa fa-heart"></i><%= @book.favorites.count %>
-                <% end %>
-              </td>
-            <% else %>
-              <td>
-                <%= link_to book_favorites_path(@book.id), method: :post do %>
-                <i class="far fa-heart"></i><%= @book.favorites.count %>
-                <% end %>
-              </td>
-            <% end %>
-            <td>コメント数：<%= @book.comments.count %></td>
+            <td class="favorite-btn"><%= render 'favorites/btn', book: @book %></td>
+            <td class="comments-count" >コメント数：<%= @book.comments.count %></td>
+
             <% if @book.user_id == current_user.id %>
             <td><%= link_to 'Edit', "/books/#{@book.id}/edit", class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to 'Destroy', "/books/#{@book.id}", class: "btn btn-sm btn-danger", method: :delete %></td>
+            <td><%= link_to 'Destroy', book_path(@book), method: :delete,  class: "btn btn-sm btn-danger" %></td>
             <% else %>
             <% end %>
           </tr>
           </tbody>
         </table>
         <table>
-          <tbody>
-            <% @book.comments.each do |f| %>
-            <tr>
-              <td>
-                <%= link_to(f.user) do %>
-                  <%= image_tag f.user.get_profile_image, size: '50x50' %>
-                  <br><%= f.user.name %>
-                <% end %>
-              </td>
-              <td><%= f.comment %></td>
-              <td>
-                <% if f.user_id == current_user.id %>
-                 <%= link_to 'Delete' , "/books/#{f.book_id}/comments/#{f.id}", class: "btn btn-sm btn-danger", method: :delete %>
-                <% end %>
-              </td>
-            </tr>
-            <% end %>
+          <tbody class="book-comments">
+            <%= render 'comments/comment' , book: @book %>
           </tbody>
         </table>
-          <%= form_with model:[@book, @comment], method: :post do |f| %>
+          <%= form_with model:[@book, @comment], method: :post, local: false do |f| %>
           <div><%= f.text_area :comment , rows: '5', class: "w-100" %></div>
           <div><%= f.submit '送信' ,class: "btn btn-sm " %></div>
           <% end %>
