--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,8 @@
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
+      <span><%= link_to 'グループを作成する', groups_path, method: :post %></span>|
+      <span><%= link_to 'グループ一覧' groups_path %></span>
       <%= render 'index', users: @users %>
         </table>
 
