--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Groups#index</h1>
-<p>Find me in app/views/groups/index.html.erb</p>
+<div class="container">
+  <div class = "error_explanation">
+   <%= render 'books/errors', book: @book %>
+  </div>
+  <div class="row px-5 px-sm-0">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render 'users/info', user: current_user %>
+
+      <h2>New book</h2>
+      <%= render 'books/form', book: @book %>
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+      <h2>Groups</h2>
+      <%= render 'index', groups: @groups %>
+    </div>
+
+  </div>
+</div>
