--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="ol-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <%= form_with model: gruop, url: groups_path, method: :post do  |f| %>
+      <h1>Create Group</h1>
+      <%= form_with model: @group, url: groups_path, method: :post do  |f| %>
       <div class ="form-group">
       <label class = "group-name">グループ名</label>
       <%= f.text_field :name, class: 'form-control' %>
