--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,2 +1,37 @@
-<h1>Groups#show</h1>
-<p>Find me in app/views/groups/show.html.erb</p>
+<div class="container">
+  <div class="row px-5 px-sm-0">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render 'users/info', user: current_user %>
+      <h2>New book</h2>
+      <%= render 'books/form', book: Book.new %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Group Detail</h2>
+      <table class="table" >
+        <thead>
+          <th></th>
+          <th>グループ名</th>
+          <th>紹介文</th>
+          <th>メンバー</th>
+          <th colspan="3"></th>
+        </thead>
+        <tbody>
+          <tr id="group_<%= @group.id %>">
+            <td><%= image_tag @group.get_image, size: '100x100' %></td>
+            <td><%= @group.name  %></td>
+            <td><%= @group.introduction %></td>
+            <td>
+              <%= @group_users.user.name %>
+            </td>
+            <% if @group.owner_id == current_user.id %>
+            <td><%= link_to 'Edit', edit_group_path(@group.id) , class: "btn btn-sm btn-success" %></td>
+            <% else %>
+            <%= render 'group_users/btn', group: @group %>
+            <% end %>
+          </tr>
+          </tbody>
+        </table>
+    </div>
+  </div>
+</div>
