--- a/app/views/group_users/_btn.html.erb
+++ b/app/views/group_users/_btn.html.erb
@@ -1,5 +1,5 @@
-<% if @group_users.present? %>
-  <td><%= link_to 'Leave this group', group_group_users_path(group.id), class: "btn btn-success", method: :delete %></td>
+<% if group.includesUser?(current_user) %>
+  <td><%= link_to 'Leave this group', group_group_users_path(group), class: "btn btn-sm btn-success", method: :delete %></td>
 <% else %>
-  <td><%= link_to 'Join this group', group_group_users_path(group.id), class: "btn btn-danger" , method: :post %></td>
+  <td><%= link_to 'Join this group', group_group_users_path(group), class: "btn btn-sm btn-danger" , method: :post %></td>
 <% end %>
