--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class = "error_explanation">
-   <%= render 'errors', book: @book %>
+ <%= render 'layouts/errors', obj: @book %>
   </div>
   <div class="row px-5 px-sm-0">
     <div class="col-md-3">
