--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,23 +2,8 @@
   <div class="row">
     <div class="ol-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>Create Group</h1>
-      <%= form_with model: @group, url: groups_path, method: :post do  |f| %>
-      <div class ="form-group">
-      <label class = "group-name">グループ名</label>
-      <%= f.text_field :name, class: 'form-control' %>
-      </div>
-      <div class ="form-group">
-      <label class = "group-introduction">紹介文</label>
-      <%= f.text_area :introduction, class: 'form-control' %>
-      </div>
-      <div class ="form-group">
-      <label class = "group-image">グループ画像</label>
-      <%= f.file_field :image, accept: 'image/*',class: 'form-control-file'  %>
-      </div>
-      <div class ="form-group">
-      <%= f.submit 'Create Group', class: 'btn btn-info'%>
-      </div>
-      <% end %>
+        <%= render 'layouts/errors', obj: @group %>
+        <%= render 'form', group: @group %>
     </div>
   </div>
 </div>
