--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <%= render 'layouts/errors', obj: @group%>
   <div class="row px-5 px-sm-0">
     <div class="col-md-3">
       <h2>User info</h2>
@@ -10,11 +11,13 @@
       <h2>Group Detail</h2>
       <table class="table" >
         <thead>
-          <th></th>
-          <th>グループ名</th>
-          <th>紹介文</th>
-          <th>メンバー</th>
-          <th colspan="3"></th>
+          <tr>
+            <th>Image</th>
+            <th>Name</th>
+            <th>Introduction</th>
+            <th>Members</th>
+            <th colspan="3"></th>
+          </tr>
         </thead>
         <tbody>
           <tr id="group_<%= @group.id %>">
