--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,8 +9,8 @@
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <div class= "gruop-info mb-2">
-        <span><%= link_to 'グループを作成する', new_group_path %></span>|
-        <span><%= link_to 'グループ一覧' , groups_path %></span>
+        <%= link_to 'グループを作成する', new_group_path %> |
+        <%= link_to 'グループ一覧' , groups_path %>
       </div>
       <%= render 'index', users: @users %>
     </div>
