--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,17 +1,17 @@
-<%= form_with model:book, url: books_path, method: :post do |f| %>
+<%= form_with model:book, url: books_path, method: :post do |book| %>
   
   <div class= "form-group">
     <label>Title</label>
-    <%= f.text_field :title, class: 'form-control book_title' %>
+    <%= book.text_field :title, class: 'form-control book_title' %>
   </div>
   
   <div class= "form-group">
     <label>Opinion</label>
-    <%= f.text_area :body , class: 'form-control book_body'%>
+    <%= book.text_area :body , class: 'form-control book_body'%>
   </div>
   
   <div class= "form-group">
-    <%= f.submit 'Create Book', class: 'btn btn-success'%>
+    <%= book.submit 'Create Book', class: 'btn btn-success'%>
   </div>
 
 <% end %>
