--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,19 +5,19 @@
 
       <%= render 'layouts/errors', obj: @book %>
 
-      <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
+      <%= form_with model: @book, url: book_path(@book.id), method: :patch do |book| %>
         <div class= "form-group">
           <label>Title</label>
-          <%= f.text_field :title, class: 'form-control'  %>
+          <%= book.text_field :title, class: 'form-control'  %>
         </div>
 
         <div class= "form-group">
           <label>Opinion</label>
-          <%= f.text_area :body, class: 'form-control'   %>
+          <%= book.text_area :body, class: 'form-control'   %>
         </div>
 
         <div class= "form-group">
-          <%= f.submit 'Update Book', class: 'btn btn-success'  %>
+          <%= book.submit 'Update Book', class: 'btn btn-success'  %>
         </div>
 
       <% end %>
